doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/usr/lib/jvm/java-8-oracle/bin/javadoc
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/usr/share/bluej/bluejcore.jar:/usr/share/bluej/junit-4.11.jar:/usr/share/bluej/hamcrest-core-1.3.jar:/usr/share/bluej/lang-stride.jar:/usr/share/bluej/userlib/pi4j-core.jar:/usr/share/bluej/userlib/pi4j-service.jar:/usr/share/bluej/userlib/pi4j-device.jar:/usr/share/bluej/userlib/pi4j-gpio-extension.jar:/home/midr/MIDR/AHORA/DOCENCIA/POOB-2021-01/JAVA/CALCULADORAS/2021-1/calculadora
-d
/home/midr/MIDR/AHORA/DOCENCIA/POOB-2021-01/JAVA/CALCULADORAS/2021-1/calculadora/doc
-encoding
UTF-8
-charset
UTF-8
/home/midr/MIDR/AHORA/DOCENCIA/POOB-2021-01/JAVA/CALCULADORAS/2021-1/calculadora/Table.java
<---- end of javadoc command ---->
Loading source file /home/midr/MIDR/AHORA/DOCENCIA/POOB-2021-01/JAVA/CALCULADORAS/2021-1/calculadora/Table.java...
Constructing Javadoc information...
/home/midr/MIDR/AHORA/DOCENCIA/POOB-2021-01/JAVA/CALCULADORAS/2021-1/calculadora/Table.java:67: error: cannot find symbol
    public Tabla union(Table t){
           ^
  symbol:   class Tabla
  location: class Table
/home/midr/MIDR/AHORA/DOCENCIA/POOB-2021-01/JAVA/CALCULADORAS/2021-1/calculadora/Table.java:71: error: cannot find symbol
    public Tabla interseccion(Table t){
           ^
  symbol:   class Tabla
  location: class Table
/home/midr/MIDR/AHORA/DOCENCIA/POOB-2021-01/JAVA/CALCULADORAS/2021-1/calculadora/Table.java:75: error: cannot find symbol
    public Tabla diferencia(Table t){
           ^
  symbol:   class Tabla
  location: class Table
/home/midr/MIDR/AHORA/DOCENCIA/POOB-2021-01/JAVA/CALCULADORAS/2021-1/calculadora/Table.java:80: error: cannot find symbol
    public Tabla diferenciaSimetrica(Table t){
           ^
  symbol:   class Tabla
  location: class Table
/home/midr/MIDR/AHORA/DOCENCIA/POOB-2021-01/JAVA/CALCULADORAS/2021-1/calculadora/Table.java:84: error: cannot find symbol
    public Tabla producto(Table t){
           ^
  symbol:   class Tabla
  location: class Table
Standard Doclet version 1.8.0_201
Building tree for all the packages and classes...
Generating /home/midr/MIDR/AHORA/DOCENCIA/POOB-2021-01/JAVA/CALCULADORAS/2021-1/calculadora/doc/Table.html...
/home/midr/MIDR/AHORA/DOCENCIA/POOB-2021-01/JAVA/CALCULADORAS/2021-1/calculadora/Table.java:33: warning - @return tag has no arguments.
/home/midr/MIDR/AHORA/DOCENCIA/POOB-2021-01/JAVA/CALCULADORAS/2021-1/calculadora/Table.java:42: warning - @return tag has no arguments.
/home/midr/MIDR/AHORA/DOCENCIA/POOB-2021-01/JAVA/CALCULADORAS/2021-1/calculadora/Table.java:33: warning - @param argument "tuples," is not a parameter name.
/home/midr/MIDR/AHORA/DOCENCIA/POOB-2021-01/JAVA/CALCULADORAS/2021-1/calculadora/Table.java:33: warning - @param argument "tuples," is not a parameter name.
/home/midr/MIDR/AHORA/DOCENCIA/POOB-2021-01/JAVA/CALCULADORAS/2021-1/calculadora/Table.java:42: warning - @param argument "tupla," is not a parameter name.
Generating /home/midr/MIDR/AHORA/DOCENCIA/POOB-2021-01/JAVA/CALCULADORAS/2021-1/calculadora/doc/package-frame.html...
Generating /home/midr/MIDR/AHORA/DOCENCIA/POOB-2021-01/JAVA/CALCULADORAS/2021-1/calculadora/doc/package-summary.html...
Generating /home/midr/MIDR/AHORA/DOCENCIA/POOB-2021-01/JAVA/CALCULADORAS/2021-1/calculadora/doc/constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating /home/midr/MIDR/AHORA/DOCENCIA/POOB-2021-01/JAVA/CALCULADORAS/2021-1/calculadora/doc/allclasses-frame.html...
Generating /home/midr/MIDR/AHORA/DOCENCIA/POOB-2021-01/JAVA/CALCULADORAS/2021-1/calculadora/doc/allclasses-noframe.html...
Generating /home/midr/MIDR/AHORA/DOCENCIA/POOB-2021-01/JAVA/CALCULADORAS/2021-1/calculadora/doc/index.html...
10 warnings
